# arxiv_scraper_bot

./: .gitignore  Dockerfile  README.md  config.yaml.example  pyproject.toml  requirements.txt
src/: main.py  scrape.py
