[tool.poetry]
name = "arxiv-scraper-bot"
version = "0.1.0"
description = "Bot which would parse arxiv articles."
authors = ["Olga Lipina"]
readme = "README.md"
packages = [{include = "arxiv-scraper-bot"}]

[tool.poetry.dependencies]
python = "^3.10"
arxivscraper = "^0.0.5"
python-telegram-bot = "^21.1.1"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
